# y-r_ocr

./: .env  .gitignore  README.md  agent.py  app.py  auto_extracted.csv  main.py  packages.txt  pyproject.toml  requirements.txt
src/: app.py
src/agent/: ocr_agent.py  validation_agent.py
src/utils/: data_processing.py  file_converters.py  google_ai.py
