[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai==1.45.0",
    "ipykernel==7.0.1",
    "pandas==2.3.3",
    "reportlab==4.4.4",
    "streamlit==1.50.0",
    "pypdf==6.1.1",
    "python-docx==1.2.0",
    "tesserocr>=2.9.1",
    "pillow>=11.3.0",
    "pip>=25.2",
    "pytesseract>=0.3.13",
]
